fixed type + corrected german quotes

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -1,36 +1,36 @@
 
 
-Dialog "Lobby-Konfiguration"
+Dialog \glqq{}Lobby-Konfiguration\grqq{}
 
-Mit der Schaltfläche "Abbrechen" wechselt man zum Dialog "Lobby-Übersicht".
-Mit der Schaltfläche "Lobby erstellen" wechselt man zum Dialog "Lobby" in eine Lobby mit den eingestellten Parametern, falls ein valider Lobby-Name in das entsprechende Eingabefeld eingegeben wurde.
+Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht".
+Mit der Schaltfläche \glqq{}Lobby erstellen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} in eine Lobby mit den eingestellten Parametern, falls ein valider Lobby-Name in das entsprechende Eingabefeld eingegeben wurde.
 Falls in dieses Feld kein valider Lobby-Name eingegeben wurde, so wird ein Pop-Up-Fenster mit einer entsprechenden Nachricht geöffnet.
-In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog "Szenario-/Charakter-/Partie-Editor" und eine neue Datei des entsprechenden Typs wird erstellt und zum editieren geöffnet.
-Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift "Bearbeiten" neben dem Eintrag. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
+In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog \glqq{}Szenario-/Charakter-/Partie-Editor\grqq{} und eine neue Datei des entsprechenden Typs wird erstellt und zum editieren geöffnet.
+Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}Bearbeiten\grqq{} neben dem Eintrag. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
 
-Dialog "Lobby"
+Dialog \glqq{}Lobby\grqq{}
 
 Die Liste mit den verbundenen Clients wird kontinuierlich sortiert, sodass die Spieler immer an oberster Stelle stehen. Die Spieler und die Zuschauer werden untereinander chronologisch nach Beitritt zur Lobby bzw. dem letzten Rollenwechsel sortiert, sodass der Client, der als letzter als Zuschauer der Lobby beigetreten ist bzw. als letzter innerhalb der Lobby die Rolle zu Zuschauer geändert hat, den untersten Eintrag in der Liste hat. Die KI-Clients sind am Benutzernamen erkennbar. 
-Mit der Schaltfläche "Rolle wechseln" ändert sich die eigene Rolle von 'Spieler' zu 'Zuschauer' und umgekehrt. 
-Mit der Schaltfläche "KI hinzufügen" wechselt der Client in den Dialog "KI-Konfiguration".
-Mit der Schaltfläche "Zurück" wechselt der Client in den Dialog "Lobby-Übersicht".
-Die Schaltfläche "Bereit" ist nur für Clients in der Rolle 'Spieler' eingeblendet. Mit dieser Schaltfläche signalisiert der Benutzer, dass er bereit ist, die Spielpartie zu beginnen. Wenn die Schaltfläche gedrückt wird, wird sie ersetzt durch eine Schaltfläche mit der Aufschrift "Nicht mehr bereit". Mit dieser Schaltfläche signalisiert der Benutzer, dass er nun doch nicht mehr bereit ist, die Spielpartie zu beginnen. Die Schaltfläche "Spiel starten" kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat und alle Spieler-Clients der Lobby ihre Spielbereitschaft mit Drücken der Schaltfläche "Bereit" signalisiert haben.
-Mit der Schaltfläche "Spiel starten" wird eine Spielpartie gestartet und die Ansicht wird zum Dialog "Spielfeld" gewechselt.
+Mit der Schaltfläche \glqq{}Rolle wechseln\grqq{} ändert sich die eigene Rolle von 'Spieler' zu 'Zuschauer' und umgekehrt. 
+Mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt der Client in den Dialog \glqq{}KI-Konfiguration\grqq{}.
+Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt der Client in den Dialog \glqq{}Lobby-Übersicht\grqq{}.
+Die Schaltfläche \glqq{}Bereit\grqq{} ist nur für Clients in der Rolle 'Spieler' eingeblendet. Mit dieser Schaltfläche signalisiert der Benutzer, dass er bereit ist, die Spielpartie zu beginnen. Wenn die Schaltfläche gedrückt wird, wird sie ersetzt durch eine Schaltfläche mit der Aufschrift \glqq{}Nicht mehr bereit\grqq{}. Mit dieser Schaltfläche signalisiert der Benutzer, dass er nun doch nicht mehr bereit ist, die Spielpartie zu beginnen. Die Schaltfläche \glqq{}Spiel starten\grqq{} kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat und alle Spieler-Clients der Lobby ihre Spielbereitschaft mit Drücken der Schaltfläche \glqq{}Bereit\grqq{} signalisiert haben.
+Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestartet und die Ansicht wird zum Dialog \glqq{}Spielfeld\grqq{} gewechselt.
 
-Dialog "Szenario-Editor"
+Dialog \glqq{}Szenario-Editor\grqq{}
 
-Dialog "Charakter-Editor"
+Dialog \glqq{}Charakter-Editor\grqq{}
 
-Dialog "Partie-Editor"
+Dialog \glqq{}Partie-Editor\grqq{}
 
-Mit der Schaltfläche "Abbrechen" wechselt die Ansicht zu dem Dialog, aus welchem der Partie-Editor aufgerufen wurde. D.h. wenn er aus der Lobby-Konfiguration aufgerufen wurde, dann wechselt die Ansicht zurück zur Lobby-Konfiguration, wenn er aus der Editor-Übersicht geöffnet wurde, dann wechselt die Ansicht wieder dahin zurück.
-Mit der Schaltfläche "Konfiguration speichern" wird die Datei gespeichert und die Ansicht wechselt zu dem Dialog,  aus welchem der Partie-Editor aufgerufen wurde.
-Mit der Schaltfläche "Editor-Übersicht" wird die Ansicht zum Dialog "Editor-Übersicht" gewechselt, falls alle Änderungen schon gespeichert wurden. Falls noch ungespeicherte Änderungen vorliegen, wird ein Pop-Up-Fenster geöffnet, das abfragt, ob die Konfiguration noch gespeichert werden soll. Wenn in diesem Fenster die Schaltfläche "Ja" bzw. "Nein" angeklickt wird, dann wechselt die Ansicht zum Dialog "Editor-Übersicht" und die Konfiguration wird gespeichert bzw. nicht gespeichert. Mit der Schaltfläche "Abbrechen" schließt sich das Fenster wieder und der Dialog "Partie-Editor" wird wieder normal dargestellt.
+Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt die Ansicht zu dem Dialog, aus welchem der Partie-Editor aufgerufen wurde. D.h. wenn er aus der Lobby-Konfiguration aufgerufen wurde, dann wechselt die Ansicht zurück zur Lobby-Konfiguration, wenn er aus der Editor-Übersicht geöffnet wurde, dann wechselt die Ansicht wieder dahin zurück.
+Mit der Schaltfläche \glqq{}Konfiguration speichern\grqq{} wird die Datei gespeichert und die Ansicht wechselt zu dem Dialog,  aus welchem der Partie-Editor aufgerufen wurde.
+Mit der Schaltfläche \glqq{}Editor-Übersicht\grqq{} wird die Ansicht zum Dialog \glqq{}Editor-Übersicht\grqq{} gewechselt, falls alle Änderungen schon gespeichert wurden. Falls noch ungespeicherte Änderungen vorliegen, wird ein Pop-Up-Fenster geöffnet, das abfragt, ob die Konfiguration noch gespeichert werden soll. Wenn in diesem Fenster die Schaltfläche \glqq{}Ja\grqq{} bzw.\glqq{}Nein\grqq{} angeklickt wird, dann wechselt die Ansicht zum Dialog \glqq{}Editor-Übersicht\grqq{} und die Konfiguration wird gespeichert bzw. nicht gespeichert. Mit der Schaltfläche \glqq{}Abbrechen\grqq{} schließt sich das Fenster wieder und der Dialog \glqq{}Partie-Editor\grqq{} wird wieder normal dargestellt.
 Mit direkter Eingabe in das Feld der Anzeige des Werts einer Wahrscheinlichkeit oder eines anderen Werts, dem Schieberegler daneben oder den Inkrement- und Dekrementschaltflächen kann der Wert einer Wahrscheinlichkeit in Prozent oder ein Schadens-, Reichweiten-, etc. -wert festgelegt und angepasst werden.
 
-Dialog "KI-Konfiguration"
+Dialog \glqq{}KI-Konfiguration\grqq{}
 
-Mit der Schaltfläche "Zurück" wechselt man zum Dialog "Lobby", ohne das ein KI-Client hinzugefügt wurde, mit der Schaltfläche "KI hinzufügen" wechselt man zum Dialog "Lobby" und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
+Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne das ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
 Die Intelligenzstufe der KI kann über die Radiobuttons mit den Bezeichnungen 'dumm', 'normal' und 'schlau' eingestellt werden.
-Wie in FA-KI 43 beschrieben, muss es möglich sein, die KI mithilfe einer Konfigurationsdatei zu konfigurieren. Deswegen wird in diesem Dialog eine Liste mit Konfigurationsdateien dargestellt, aus denen man eine gespeicherte Konfiguration auswählen kann. Nach der Auswahl einer Konfiguration kann man mit der Schaltfläche "Konfiguration laden" diese Konfiguration automatisch einstellen.
-In das Eingabefeld über der Schaltfläche "Konfiguration speichern" wird der Name der Konfigurationsdatei vom Benutzer eingetragen. Wenn dort ein valider Dateiname eingegeben wurde, so kann die aktuell eingestellte Konfiguration mit der Schaltfläche "Konfiguration speichern" in das dafür vorgesehene Verzeichnis gespeichert werden und wird an die Liste der Konfigurationsdateien angefügt.
+Wie in FA-KI 43 beschrieben, muss es möglich sein, die KI mithilfe einer Konfigurationsdatei zu konfigurieren. Deswegen wird in diesem Dialog eine Liste mit Konfigurationsdateien dargestellt, aus denen man eine gespeicherte Konfiguration auswählen kann. Nach der Auswahl einer Konfiguration kann man mit der Schaltfläche \glqq{}Konfiguration laden\grqq{} diese Konfiguration automatisch einstellen.
+In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{} wird der Name der Konfigurationsdatei vom Benutzer eingetragen. Wenn dort ein valider Dateiname eingegeben wurde, so kann die aktuell eingestellte Konfiguration mit der Schaltfläche \glqq{}Konfiguration speichern\grqq{} in das dafür vorgesehene Verzeichnis gespeichert werden und wird an die Liste der Konfigurationsdateien angefügt.
