--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -9,6 +9,7 @@
 \usepackage{placeins}
 \usepackage{tikz}
 \usepackage{tikz-uml}
+\usepackage[ngerman]{babel}
 \setboolean{showsolutions}{false}
 
 \ifthenelse{\boolean{showsolutions}}{
