#25 Nutzungskonzept fortgeführt Szenario Editor

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -19,6 +19,10 @@ Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestarte
 
 Dialog \glqq{}Szenario-Editor\grqq{}
 
+Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen.
+
+
+
 Dialog \glqq{}Charakter-Editor\grqq{}
 
 Dialog \glqq{}Partie-Editor\grqq{}
