--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -17,6 +17,12 @@ Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt der Client in den Dialog \g
 Die Schaltfläche \glqq{}Bereit\grqq{} ist nur für Clients in der Rolle 'Spieler' eingeblendet. Mit dieser Schaltfläche signalisiert der Benutzer, dass er bereit ist, die Spielpartie zu beginnen. Wenn die Schaltfläche gedrückt wird, wird sie ersetzt durch eine Schaltfläche mit der Aufschrift \glqq{}Nicht mehr bereit\grqq{}. Mit dieser Schaltfläche signalisiert der Benutzer, dass er nun doch nicht mehr bereit ist, die Spielpartie zu beginnen. Die Schaltfläche \glqq{}Spiel starten\grqq{} kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat und alle Spieler-Clients der Lobby ihre Spielbereitschaft mit Drücken der Schaltfläche \glqq{}Bereit\grqq{} signalisiert haben.
 Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestartet und die Ansicht wird zum Dialog \glqq{}Spielfeld\grqq{} gewechselt.
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/lobbymockup.png}
+  \caption{Mockup für das Lobby-View}
+\end{figure}
+
 Dialog \glqq{}Szenario-Editor\grqq{}
 
 Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button auf die letzte Seite zurück. Über den Abbrechen-Button kehrt der Benutzer auch zur letzten Seite zurück und die Änderungen werden verworfen. Über den Editor-Übersicht-Button gelangt der Benutzer zur Editor-Übersicht. Klickt der Benutzer auf den Abbrechen-Button oder auf den Editor-Übersicht-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
