KI-Konfiguration_Mockup hinzugefügt und in das nutzungskonzept.tex eingebunden

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -19,7 +19,7 @@ Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestarte
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Meilenstein03/lobbymockup.png}
+  \includegraphics[width=\textwidth]{Meilenstein03/Lobby_Mockup.png}
   \caption{Mockup für das Lobby-View}
 \end{figure}
 
@@ -37,6 +37,12 @@ Mit der Schaltfläche \glqq{}Editor-Übersicht\grqq{} wird die Ansicht zum Dialo
 Mit direkter Eingabe in das Feld der Anzeige des Werts einer Wahrscheinlichkeit oder eines anderen Werts, dem Schieberegler daneben oder den Inkrement- und Dekrementschaltflächen kann der Wert einer Wahrscheinlichkeit in Prozent oder ein Schadens-, Reichweiten-, etc. -wert festgelegt und angepasst werden.
 
 Dialog \glqq{}KI-Konfiguration\grqq{}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/KI-Konfiguration_Mockup.png}
+  \caption{Mockup für das Lobby-View}
+\end{figure}
 
 Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne das ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
 Die Intelligenzstufe der KI kann über die Radiobuttons mit den Bezeichnungen 'dumm', 'normal' und 'schlau' eingestellt werden.
