Mockup für den Partie-Editor hinzugefügt und in das nutzungskonzept.tex integriert.

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -42,6 +42,12 @@ Mit der Schaltfläche \glqq{}Konfiguration speichern\grqq{} wird die Datei gespe
 Mit der Schaltfläche \glqq{}Editor-Übersicht\grqq{} wird die Ansicht zum Dialog \glqq{}Editor-Übersicht\grqq{} gewechselt, falls alle Änderungen schon gespeichert wurden. Falls noch ungespeicherte Änderungen vorliegen, wird ein Pop-Up-Fenster geöffnet, das abfragt, ob die Konfiguration noch gespeichert werden soll. Wenn in diesem Fenster die Schaltfläche \glqq{}Ja\grqq{} bzw.\glqq{}Nein\grqq{} angeklickt wird, dann wechselt die Ansicht zum Dialog \glqq{}Editor-Übersicht\grqq{} und die Konfiguration wird gespeichert bzw. nicht gespeichert. Mit der Schaltfläche \glqq{}Abbrechen\grqq{} schließt sich das Fenster wieder und der Dialog \glqq{}Partie-Editor\grqq{} wird wieder normal dargestellt.
 Mit direkter Eingabe in das Feld der Anzeige des Werts einer Wahrscheinlichkeit oder eines anderen Werts, dem Schieberegler daneben oder den Inkrement- und Dekrementschaltflächen kann der Wert einer Wahrscheinlichkeit in Prozent oder ein Schadens-, Reichweiten-, etc. -wert festgelegt und angepasst werden.
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Partie-Editor_Mockup.png}
+  \caption{Mockup für den Partie-Editor}
+\end{figure}
+
 Dialog \glqq{}KI-Konfiguration\grqq{}
 
 Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne das ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
