adds game mockup

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -66,3 +66,10 @@ In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{}
   \includegraphics[width=\textwidth]{Meilenstein03/KI-Konfiguration_Mockup.png}
   \caption{Mockup für die KI-Konfiguration}
 \end{figure}
+
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Game_Mockup.png}
+  \caption{Mockup für den Spielbildschirm}
+\end{figure}
