Mockup für das Hauptmenü hinzugefügt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -1,4 +1,12 @@
+Dialog \glqq{}Hauptmenü\grqq{}
 
+Im Hauptmenü kann der Benutzer über den Spielen-Button in die Lobby-Übersicht gelangen. Mit dem Button Einstellungen kommt der Benutzer in die Editor-Übersicht und durch Klick auf den Hilfe-Button öffnet sich ein Popup, in dem dem Nutzer hilfreiche Informationen zur Verfügung gestellt werden. Mit dem Schließen-Button kann der Benutzer die Anwendung verlassen und schließen.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Hauptmenue_Mockup.png}
+  \caption{Mockup für das Hauptmenü}
+\end{figure}
 
 Dialog \glqq{}Lobby-Konfiguration\grqq{}
 
