Mockup für die Lobby-Übersicht hinzugefügt#

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -8,6 +8,16 @@ Im Hauptmenü kann der Benutzer über den Spielen-Button in die Lobby-Übersicht
   \caption{Mockup für das Hauptmenü}
 \end{figure}
 
+Dialog \glqq{}Lobby-Übersicht\grqq{}
+
+In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobby und die Anzahl deren Mitglieder angezeigt. Durch Klicken auf beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Zurück-Button gelangt man zum Hauptmenü. Der Hilfe-Button öffnet ein Popup-Fenster, in welchem steht, welche Funktionen innerhalb der Lobby-Übersicht zur Verfügung stehen.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Lobby-Uebersicht_Mockup.png}
+  \caption{Mockup für die Lobby-Übersicht}
+\end{figure}
+
 Dialog \glqq{}Lobby-Konfiguration\grqq{}
 
 Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht".
