--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -158,12 +158,14 @@
 Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems spezifizieren.
 \subsubsection{Server} \mbox{}\\
 \input{Meilenstein01/chapter/serverFA.tex}
+\newpage
 \subsubsection{Client} \mbox{}\\
 \input{Meilenstein01/chapter/clientFA.tex}
 \subsubsection{KI-Client} \mbox{}\\
 \input{Meilenstein01/chapter/kiFA.tex}
 \subsubsection{Editor} \mbox{}\\
 \input{Meilenstein01/chapter/editorFA.tex}
+\newpage
 \subsubsection{Allgemeine funktionale Anforderungen} \mbox{}\\
 \input{Meilenstein01/chapter/genFA.tex}
 
