#34 added prio to FA

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -155,7 +155,9 @@
 
 \clearpage
 \subsection{Funktionale Systemanforderungen}
-Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems spezifizieren.
+Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems spezifizieren.\\
+Jeder funktionalen Systemanforderungen wird eine Priorität zugeordnet. Es gibt fünf verschiedene Stufen (-$\;$-,-,0,+,++). Wobei ++
+eine funktionale Anforderung mit der höchsten Priorität ist und -$\;$- eine funktionale Anforderung mit der niedrigsten Priorität ist.
 \subsubsection{Server} \mbox{}\\
 \input{Meilenstein01/chapter/serverFA.tex}
 \newpage
