#29 fixed client formulierung

--- a/Meilenstein04/betriebskonzept.tex
+++ b/Meilenstein04/betriebskonzept.tex
@@ -1,8 +1,8 @@
 Das fertige Spiel bietet die Möglichkeit über das Netzwerk oder lokal ein rundenbasiertes
 Strategiespiel zu spielen.\\
 Das Produkt besteht aus einem Client, welcher die graphische Nutzerschnittstelle zum Spiel
-darstellt. In den Client inkludiert ist ein Editor für die Konfiguration von Charakteren und
-Szenarien. Weiter enthält das Produkt einen Server mit welchem sich die Clients verbinden.\\
+darstellt. Aus dem Client kann ein Editor gestartet werden. Mit diesem kann man Konfigurationsdateien von Charakteren und
+Szenarien bearbeiten. Weiter enthält das Produkt einen Server mit welchem sich die Clients verbinden.\\
 Zudem gibt es einen KI-Spieler, welcher aus dem Client gestartet werden kann.\\
 Der Client kann auf sämtlichen Desktop Plattformen ausgeführt werden. Eine Anleitung für die Nutzung des Client, wird in digitaler Form bereit gestellt. 
 Außerdem gibt es Hilfe-Funktionen im Client.\\
