--- a/Meilenstein04/abnahmekriterien.tex
+++ b/Meilenstein04/abnahmekriterien.tex
@@ -1,1 +1,3 @@
-Es muss eine lauffähige Version der Software vorgelegt werden, die alle verbindlichen Anforderungen erfüllt. Die Software muss eine gute Qualität haben, ausreichend und sinnvoll dokumentiert und getestet sein. Die Qualität der Software muss nachgewiesen werden durch umfangreiche dokumentierte Qualitätssicherungsmethoden. Die Abnahme ist erfolgreich, wenn der Kunde mit dem Produkt zufrieden ist.
+Es muss eine funktionale Version der Software vorgelegt werden, die alle verbindlichen Anforderungen erfüllt.
+ Die Software muss, bemessen an den festgelegten Kriterien, eine gute Qualität haben, ausreichend und sinnvoll dokumentiert und getestet sein.
+ Die Qualität der Software muss nachgewiesen werden durch umfangreiche dokumentierte Qualitätssicherungsmethoden. Die Abnahme ist erfolgreich, wenn der Kunde mit dem Produkt zufrieden ist.
