--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -82,12 +82,25 @@
 
 \assignmenttype{}
 \assignmentno{}
-\title{Pflichtenheft Team 17}
+\title{}
 
 \begin{document}
 \setcounter{secnumdepth}{4}
 
 \maketitle
+\begin{center}
+{\fontsize{50}{60}\selectfont\bfseries\itshape No Time To Spy}\\
+\vspace*{5mm}
+{\huge Pflichtenheft Team 17}\\
+\vspace*{20mm}
+{\large Dominik Authaler\\
+Lukas Bleile\\
+Marco Deuscher\\
+Jonas Otto\\
+Carolin Schindler\\
+Dominik Tabib Khoie}
+\end{center}
+\newpage
 
 \tableofcontents
 
