#25 Einstellungen_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -1,11 +1,21 @@
 Dialog \glqq{}Hauptmenü\grqq{}
 
-Im Hauptmenü kann der Benutzer über den Spielen-Button in die Lobby-Übersicht gelangen. Mit dem Button Einstellungen kommt der Benutzer in die Editor-Übersicht und durch Klick auf den Hilfe-Button öffnet sich ein Popup, in dem dem Nutzer hilfreiche Informationen zur Verfügung gestellt werden. Mit dem Schließen-Button kann der Benutzer die Anwendung verlassen und schließen.
+Im Hauptmenü kann der Benutzer über den Spielen-Button in die Lobby-Übersicht gelangen, wenn die Verbindung erfolgreich aufgebaut werden konnte. Falls nicht, erscheint eine Fehlermeldung als Popup. Mit dem Button Einstellungen kommt der Benutzer zu dem Einstellungen-Dialog. Durch Klick auf den Hilfe-Button öffnet sich ein Popup, in dem dem Nutzer hilfreiche Informationen zur Verfügung gestellt werden. Mit dem Beenden-Button kann der Benutzer die Anwendung verlassen und schließen.
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Hauptmenue_Mockup.png}
   \caption{Mockup für das Hauptmenü}
+\end{figure}
+
+Dialog \glqq{}Einstellungen\grqq{}
+
+In den Einstellungen kann man diverse Einstellungen vornehmen. Über den Button Hauptmenü gelangt man zurück ins Hauptmenü.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Einstellungen_Mockup.png}
+  \caption{Mockup für die Einstellungen}
 \end{figure}
 
 Dialog \glqq{}Lobby-Übersicht\grqq{}
