--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -18,6 +18,16 @@ In den Einstellungen kann man diverse Einstellungen vornehmen. Über den Button 
   \caption{Mockup für die Einstellungen}
 \end{figure}
 
+Dialog \glqq{}Hilfe\grqq{}
+
+In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem entsprechenden Dialog aufgezeigt.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Hilfe_Mockup.png}
+  \caption{Mockup für das Hilfe-Popup}
+\end{figure}
+
 Dialog \glqq{}Lobby-Übersicht\grqq{}
 
 In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobby und die Anzahl deren Mitglieder angezeigt. Durch Klicken auf beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Zurück-Button gelangt man zum Hauptmenü. Der Hilfe-Button öffnet ein Popup-Fenster, in welchem steht, welche Funktionen innerhalb der Lobby-Übersicht zur Verfügung stehen.
