#25 FehlerBeiDerVerbindungZumServer_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -28,6 +28,16 @@ In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem ent
   \caption{Mockup für das Hilfe-Popup}
 \end{figure}
 
+Dialog \glqq{}Fehler bei der Verbindung zum Server\grqq{}
+
+Falls die Verbindung zum Server fehlgeschlagen ist, wird dem Benutzer ein Popup angezeigt, das ihm diese Information mitteilt.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/FehlerBeiDerVerbindungZumServer_Mockup.png}
+  \caption{Mockup für das Fehler bei der Verbindung zum Server-Popup}
+\end{figure}
+
 Dialog \glqq{}Lobby-Übersicht\grqq{}
 
 In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobby und die Anzahl deren Mitglieder angezeigt. Durch Klicken auf beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Zurück-Button gelangt man zum Hauptmenü. Der Hilfe-Button öffnet ein Popup-Fenster, in welchem steht, welche Funktionen innerhalb der Lobby-Übersicht zur Verfügung stehen.
