#25 Lobby-Uebersicht_Mockup verbessert

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -40,7 +40,7 @@ Falls die Verbindung zum Server fehlgeschlagen ist, wird dem Benutzer ein Popup 
 
 Dialog \glqq{}Lobby-Übersicht\grqq{}
 
-In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobby und die Anzahl deren Mitglieder angezeigt. Durch Klicken auf beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Zurück-Button gelangt man zum Hauptmenü. Der Hilfe-Button öffnet ein Popup-Fenster, in welchem steht, welche Funktionen innerhalb der Lobby-Übersicht zur Verfügung stehen.
+In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anzahl der Spieler und Zuschauer, die sich in ihr befinden angezeigt. Durch Klicken auf Beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Verlassen-Button gelangt man zum Hauptmenü. Der Aktualisieren-Button aktualisiert die Lobby-Übersicht. Mit dem Button Namen ändern, kann man den Namen einer Lobby verändern. Mit dem Button Lobby erstellen kann man eine neue Lobby erstellen.
 
 \begin{figure}
   \centering
