#25 NamenAendern_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -18,7 +18,7 @@ In den Einstellungen kann man diverse Einstellungen vornehmen. Über den Button 
   \caption{Mockup für die Einstellungen}
 \end{figure}
 
-Dialog \glqq{}Hilfe\grqq{}
+Popup \glqq{}Hilfe\grqq{}
 
 In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem entsprechenden Dialog aufgezeigt.
 
@@ -28,7 +28,7 @@ In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem ent
   \caption{Mockup für das Hilfe-Popup}
 \end{figure}
 
-Dialog \glqq{}Fehler bei der Verbindung zum Server\grqq{}
+Popup \glqq{}Fehler bei der Verbindung zum Server\grqq{}
 
 Falls die Verbindung zum Server fehlgeschlagen ist, wird dem Benutzer ein Popup angezeigt, das ihm diese Information mitteilt.
 
@@ -46,6 +46,16 @@ In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anza
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Lobby-Uebersicht_Mockup.png}
   \caption{Mockup für die Lobby-Übersicht}
+\end{figure}
+
+Popup \glqq{}Namen ändern\grqq{}
+
+In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern. Durch den Schließen-Button verschwindet das Popup-Fenster und der benutzer gelangt zurück in die Lobby-Übersicht.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/NamenAendern_Mockup.png}
+  \caption{Mockup für das Namen ändern-Popup}
 \end{figure}
 
 Dialog \glqq{}Lobby-Konfiguration\grqq{}
