#25 LobbynamenEingebenUndKonfigErstellen_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -58,6 +58,16 @@ In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern
   \caption{Mockup für das Namen ändern-Popup}
 \end{figure}
 
+Popup \glqq{}Lobbynamen eingeben und Konfig. erstellen\grqq{}
+
+In diesem Popup kann der Benutzer eine neue Lobby erstellen. Dazu muss er den Lobbynamen und eine Konfiguration festlegen. Durch Klicken auf den Button Neue Konfig. kann der Benutzer eine Konfiguration auswählen oder eine neue erstellen. Durch Klicken auf den Bestätigen-Button, kommt der Benutzer zurück in die Lobbyübersicht.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/LobbynamenEingebenUndKonfigErstellen_Mockup.png}
+  \caption{Mockup für das Lobbynamen eingeben und Konfig. erstellen-Popup}
+\end{figure}
+
 Dialog \glqq{}Lobby-Konfiguration\grqq{}
 
 Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht".
