#25 Editor_Mockup verbessert

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -68,18 +68,17 @@ In diesem Popup kann der Benutzer eine neue Lobby erstellen. Dazu muss er den Lo
   \caption{Mockup für das Lobbynamen eingeben und Konfig. erstellen-Popup}
 \end{figure}
 
-Dialog \glqq{}Lobby-Konfiguration\grqq{}
+Dialog \glqq{}Editor\grqq{}
 
-Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht".
-Mit der Schaltfläche \glqq{}Lobby erstellen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} in eine Lobby mit den eingestellten Parametern, falls ein valider Lobby-Name in das entsprechende Eingabefeld eingegeben wurde.
-Falls in dieses Feld kein valider Lobby-Name eingegeben wurde, so wird ein Pop-Up-Fenster mit einer entsprechenden Nachricht geöffnet.
+Mit der Schaltfläche \glqq{}Schließen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht\grqq{}.
+Mit der Schaltfläche \glqq{}Hilfe\grqq{} öffnet sich ein Hilfe-Popup, in dem dem Benutzer Informationen zu möglichen Interaktionen angezeigt werden.
 In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog \glqq{}Szenario-/Charakter-/Partie-Editor\grqq{} und eine neue Datei des entsprechenden Typs wird erstellt und zum editieren geöffnet.
-Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}Bearbeiten\grqq{} neben dem Eintrag. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
+Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}bearbeiten\grqq{} neben dem Eintrag angezeigt. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Meilenstein03/Lobby-Konfiguration_Mockup.png}
-  \caption{Mockup für die Lobby-Konfiguration}
+  \includegraphics[width=\textwidth]{Meilenstein03/Editor_Mockup.png}
+  \caption{Mockup für den Editor}
 \end{figure}
 
 Dialog \glqq{}Lobby\grqq{}
