#25 Hilfe-Editor_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -18,14 +18,14 @@ In den Einstellungen kann man diverse Einstellungen vornehmen. Über den Button 
   \caption{Mockup für die Einstellungen}
 \end{figure}
 
-Popup \glqq{}Hilfe\grqq{}
+Popup \glqq{}Hilfe-Hauptmenü\grqq{}
 
 In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem entsprechenden Dialog aufgezeigt.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Meilenstein03/Hilfe_Mockup.png}
-  \caption{Mockup für das Hilfe-Popup}
+  \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-Hauptmenue_Mockup.png}
+  \caption{Mockup für das Hilfe-Hauptmenü-Popup}
 \end{figure}
 
 Popup \glqq{}Fehler bei der Verbindung zum Server\grqq{}
@@ -79,6 +79,16 @@ Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Sc
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Editor_Mockup.png}
   \caption{Mockup für den Editor}
+\end{figure}
+
+Popup \glqq{}Hilfe-Editor\grqq{}
+
+In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der benutzer kehrt zum Editor zurück.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-Editor_Mockup.png}
+  \caption{Mockup für das Hilfe-Editor-Popup}
 \end{figure}
 
 Dialog \glqq{}Lobby\grqq{}
