--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -83,7 +83,7 @@ Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Sc
 
 Popup \glqq{}Hilfe-Editor\grqq{}
 
-In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der benutzer kehrt zum Editor zurück.
+In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der Benutzer kehrt zum Editor zurück.
 
 \begin{figure}
   \centering
