#25 Popups für den Szenario-Editor erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -108,12 +108,32 @@ Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestarte
 
 Dialog \glqq{}Szenario-Editor\grqq{}
 
-Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button auf die letzte Seite zurück. Über den Abbrechen-Button kehrt der Benutzer auch zur letzten Seite zurück und die Änderungen werden verworfen. Über den Editor-Übersicht-Button gelangt der Benutzer zur Editor-Übersicht. Klickt der Benutzer auf den Abbrechen-Button oder auf den Editor-Übersicht-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
+Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button zum Editor zurück. Bei Klicken auf den Speichern-Button erscheint ein Popup-Fenster, in dem der Benutzer einen Namen für die Konfiguration festlegen muss. Über den Abbrechen-Button kehrt der Benutzer zurück zum Editor-View. Klickt der Benutzer auf den Abbrechen-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Szenario-Editor_Mockup.png}
   \caption{Mockup für den Szenario-Editor}
+\end{figure}
+
+Popup \glqq{}Speichern-Szenario-Editor\grqq{}
+
+Wenn der Benutzer seine Konfigurationsdatei speichern möchte, muss er hier einen Dateinamen festlegen. Über Abbrechen gelangt er zurück in den Szenario-Editor und über Speichern gelangt der Benutzer zurück zum Editor.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Speichern-Szenario-Editor_Mockup.png}
+  \caption{Mockup für das Speichern-Szenario-Editor-Popup}
+\end{figure}
+
+Popup \glqq{}Änderungen verwerfen-Szenario-Editor\grqq{}
+
+Wenn der Benutzer die Szenario-Konfiguration abbrechen möchte, muss er in diesem Popup bestätigen, dass er sich sicher ist, alle Änderungen zu verwerfen.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Speichern-Szenario-Editor_Mockup.png}
+  \caption{Mockup für das Änderungen verwerfen-Szenario-Editor-Popup}
 \end{figure}
 
 Dialog \glqq{}Charakter-Editor\grqq{}
